@@ -379,6 +379,8 @@ const MOption MP_CVIEW_FONT_SIZE;
 const MOption MP_CVIEW_FGCOLOUR;
 const MOption MP_CVIEW_BGCOLOUR;
 const MOption MP_CVIEW_COLOUR_HEADERS;
+const MOption MP_CHECK_FORGOTTEN_ATTACHMENTS;
+const MOption MP_CHECK_ATTACHMENTS_REGEX;
 
 const MOption MP_MSGS_SERVER_SORT;
 const MOption MP_MSGS_SORTBY;
@@ -791,6 +793,8 @@ static const MOptionData MOptions[] =
     DEFINE_OPTION(MP_CVIEW_FGCOLOUR),
     DEFINE_OPTION(MP_CVIEW_BGCOLOUR),
     DEFINE_OPTION(MP_CVIEW_COLOUR_HEADERS),
+    DEFINE_OPTION(MP_CHECK_FORGOTTEN_ATTACHMENTS),
+    DEFINE_OPTION(MP_CHECK_ATTACHMENTS_REGEX),
 
     DEFINE_OPTION(MP_MSGS_SERVER_SORT),
     DEFINE_OPTION(MP_MSGS_SORTBY),
